wineglass, tix, scrollbar fix

--- a/test/custom.css
+++ b/test/custom.css
@@ -25,7 +25,8 @@
             background-color: rgb(96, 0, 26);
         }
         .nav > li {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Dancing Script', cursive;
+            font-size: 24px;
         }
 
         .footer {
@@ -46,6 +47,12 @@
                 width: 250px;
             }
         }
+        @media (max-width: 1200px) {
+            #scroller {
+                left: -20px;
+                top: -9px;
+            }
+        }
 
         #myCarousel img {
             max-height: 400px;
@@ -59,7 +66,51 @@
         #scroller {
             width: 720px;
             height: 170px;
-            -moz-box-shadow:    inset 0 0 10px #000000;
-            -webkit-box-shadow: inset 0 0 10px #000000;
-            box-shadow:         inset 0 0 10px #000000;
+            -moz-box-shadow:    inset 0 0 15px #000000;
+            -webkit-box-shadow: inset 0 0 15px #000000;
+            box-shadow:         inset 0 0 15px #000000;
+            position: relative;
         }
+.fullscreen-bg {
+  position: fixed;
+  top: 45px;
+  right: 0;
+  bottom: 0;
+  left: 0px;
+  overflow: hidden;
+  z-index: -100;
+  /*clip: rect(0px, 962px, 20000px, 0px);*/
+  opacity: 0.8;
+}
+
+.fullscreen-bg__video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    height: 300%;
+    top: -100%;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    width: 300%;
+    left: -100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .fullscreen-bg {
+    background: url('../img/videoframe.jpg') center center / cover no-repeat;
+  }
+
+  .fullscreen-bg__video {
+    display: none;
+  }
+}
